--- a/Onsalefaneus.Prism/Onsalefaneus.Prism/Resources/Resource1.resx
+++ b/Onsalefaneus.Prism/Onsalefaneus.Prism/Resources/Resource1.resx
@@ -156,4 +156,79 @@
   <data name="Products" xml:space="preserve">
     <value>Products</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="ModifyUser" xml:space="preserve">
+    <value>Modify user</value>
+  </data>
+  <data name="ShowPurchaseHistory" xml:space="preserve">
+    <value>Show purchase history</value>
+  </data>
+  <data name="ShowShoppingCar" xml:space="preserve">
+    <value>Show shopping car</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="EmailPlaceHolder" xml:space="preserve">
+    <value>Enter your email...</value>
+  </data>
+  <data name="EmailError" xml:space="preserve">
+    <value>You must enter a valid email.</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="PasswordPlaceHolder" xml:space="preserve">
+    <value>Enter your password...</value>
+  </data>
+  <data name="PasswordError" xml:space="preserve">
+    <value>You must enter your password.</value>
+  </data>
+  <data name="ForgotPassword" xml:space="preserve">
+    <value>Forgot your password?</value>
+  </data>
+  <data name="Register" xml:space="preserve">
+    <value>Register New User</value>
+  </data>
+  <data name="LoginError" xml:space="preserve">
+    <value>Email or password wrong</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
+  <data name="LoginFirstMessage" xml:space="preserve">
+    <value>You must be logged in to complete this action. You can login or register as a user below.</value>
+  </data>
+  <data name="Qualification" xml:space="preserve">
+    <value>Qualification</value>
+  </data>
+  <data name="Qualifications" xml:space="preserve">
+    <value>Qualifications</value>
+  </data>
+  <data name="QualificationNumber" xml:space="preserve">
+    <value>Number of qualifications</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Date</value>
+  </data>
+  <data name="Remarks" xml:space="preserve">
+    <value>Remarks</value>
+  </data>
+  <data name="Details" xml:space="preserve">
+    <value>Details</value>
+  </data>
+  <data name="RemarksPlaceHolder" xml:space="preserve">
+    <value>Enter your remarks...</value>
+  </data>
+  <data name="QualificationError" xml:space="preserve">
+    <value>You must select a qualification.</value>
+  </data>
+  <data name="NewQualification" xml:space="preserve">
+    <value>New Qualification</value>
+  </data>
+  <data name="Save" xml:space="preserve">
+    <value>Save</value>
+  </data>
 </root>
